cabal-version: 2.2
name:          yesod-contact-form
version:       0.0.0
build-type:    Simple

library
  hs-source-dirs:     src
  default-extensions: NoImplicitPrelude
  build-depends:
    , base                          >=4.9.1.0 && <5
    , classy-prelude                >=0.10.2
    , foreign-store
    , yesod-core                    >=1.6.20.2
    , yesod-form                    >=1.7
    , wai
    , warp                          >=3.0

  ghc-options:
    -Wall -Werror -fwarn-tabs -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -Wimplicit-prelude -Wno-type-defaults -O2
    -Wunused-packages

  default-language:   Haskell2010

executable yesod-contact-form
  main-is:            main.hs
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude
  default-language:   Haskell2010
  build-depends:
    , base                  >=4.9.1.0 && <5
    , classy-prelude-yesod  >=1.1
    , yesod                 ^>=1.6
    , yesod-contact-form
    , wai
    , wai-extra             >=3.0
    , warp
